Manifest/auth-microservice.yml
---
apiVersion: v1
kind: Service
metadata:
  name: plonks-auth
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: plonks-auth

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plonks-auth
spec:
  selector:
    matchLabels:
      app: plonks-auth
  replicas: 3
  template:
    metadata:
      labels:
        app: plonks-auth
    spec:
      containers:
      - name: plonks-auth
        image: jorisk63/plonks:plonks.auth
        ports:
        - containerPort: 80
        volumeMounts:
        - name: secrets
          mountPath: /app/
          readOnly: true
      volumes:
      - name: secrets
        secret:
          secretName: auth-appsettings
