Manifest/cards-microservice.yml
---
apiVersion: v1
kind: Service
metadata:
  name: plonks-cards
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: plonks-cards

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plonks-cards
spec:
  selector:
    matchLabels:
      app: plonks-cards
  replicas: 3
  template:
    metadata:
      labels:
        app: plonks-cards
    spec:
      containers:
      - name: plonks-cards
        image: jorisk63/plonks:plonks.cards
        ports:
        - containerPort: 80
        volumeMounts:
        - name: secrets
          mountPath: app/appsettings.json
          subPath: appsettings.json
      volumes:
      - name: secrets
        secret:
          secretName: cards-appsettings
          optional: false
