Manifest/frontend.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-plonks
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-nginx

spec:
  tls:
    - secretName: plonks-nl-tls
      hosts:
        - plonks.nl
    - secretName: api-plonks-nl-tls
      hosts:
        - api.plonks.nl
  rules:
  - host: plonks.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plonks-frontend
            port:
              number: 80
  - host: api.plonks.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plonks-gateway
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: plonks-frontend
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: plonks-frontend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plonks-frontend
spec:
  selector:
    matchLabels:
      app: plonks-frontend
  replicas: 3
  template:
    metadata:
      labels:
        app: plonks-frontend
    spec:
      containers:
      - name: plonks-frontend
        image: jorisk63/plonks:frontend
        ports:
        - containerPort: 80
