Manifest/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-plonks
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-nginx

spec:
  tls:
    - secretName: plonks-nl-tls
      hosts:
        - plonks.nl
    - secretName: api-plonks-nl-tls
      hosts:
        - api.plonks.nl
  rules:
  - host: plonks.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plonks-frontend
            port:
              number: 80
  - host: api.plonks.nl
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: plonks-auth
            port:
              number: 80
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: plonks-auth
            port:
              number: 80
      - path: /board
        pathType: Prefix
        backend:
          service:
            name: plonks-boards
            port:
              number: 80
      - path: /list
        pathType: Prefix
        backend:
          service:
            name: plonks-lists
            port:
              number: 80
      - path: /card
        pathType: Prefix
        backend:
          service:
            name: plonks-cards
            port:
              number: 80
      - path: /checklist
        pathType: Prefix
        backend:
          service:
            name: plonks-cards
            port:
              number: 80
      - path: /comment
        pathType: Prefix
        backend:
          service:
            name: plonks-cards
            port:
              number: 80
